Fix the header version select width on mobile

--- a/resources/css/base/elements/elements.css
+++ b/resources/css/base/elements/elements.css
@@ -35,6 +35,10 @@
         background: light-dark(hsl(229deg 20% 35%), hsl(229deg 20% 35%));
         color: white;
     }
+    select {
+        /* prevent long options making the box longer */
+        max-width: 100%;
+    }
     mark {
         background: var(--color-green);
         /* e.g. >> /static-caching */
